.snakemake/log/2022-08-23T120653.720078.snakemake.log
Full Traceback (most recent call last):
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/__init__.py", line 591, in snakemake
    workflow.include(
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/workflow.py", line 1173, in include
    exec(compile(code, snakefile, "exec"), self.globals)
  File "/home/jeszyman/repos/cfdna-cna/workflow/int_test.smk", line 34
    
    ^
SyntaxError: invalid syntax

SyntaxError in line 33 of /home/jeszyman/repos/cfdna-cna/workflow/int_test.smk:
invalid syntax
